# LogLens

./: .gitignore  CMakeLists.txt  README.md  deploy.bat
scripts/: gen_log.py  package_windows.ps1
src/: LogDelegate.cpp  LogDelegate.h  LogFilterProxy.cpp  LogFilterProxy.h  LogLoader.cpp  LogLoader.h  LogModel.cpp  LogModel.h  LogTailer.cpp  LogTailer.h  MainWindow.cpp  MainWindow.h  main.cpp
tests/: TestLogFilterProxy.cpp  TestLogModel.cpp
